Changes for 2.2.4rc1

New features:
.......... [ZBX-7811] added example robots.txt file (Richlv)
A.F....... [ZBX-1357] updated Brazilian Portuguese translation; thanks to Zabbix translators (Richlv)
........S. [ZBX-7555] removed "select" statement from the history cache; increased the cache performance (Sasha)

Bug fixes:
..F....... [ZBX-8123] fixed form fields show/hide switching in IE9 (Eduard)
..F....... [ZBX-8083] fixed proxy performance query item conditions to be same as in dashboard (Krists)
..F....... [ZBX-8021] fixed password changing for users with internal authentication (Eduard)
........S. [ZBX-8133] fixed possible deadlock while updating host_inventory table (Sasha)
..F....... [ZBX-8104] fixed inverted case sensitivity for regular expressions (Krists)
...G...... [ZBX-8117] fixed possible crash of agent under Windows after asking the "system.sw.arch" item (Sasha)
..F....... [ZBX-8093] fixed incorrect plural in global script property host and user group labels (Richlv)
..F....... [ZBX-7997] fixed applications not being displayed in template item mass update form (Ivo)
.......P.. [ZBX-7825] fixed saving of the history data in sequential time order on proxy side (Sasha)
.......PS. [ZBX-8035] fixed proxy queue for ICMP, JMX and SNMP items being calculated incorrectly by the server (asaveljevs)
.D........ [ZBX-6542] added additional information in the default server configuration file about HousekeepingFrequency parameter (Sasha)
.......PS. [ZBX-8077] fixed log messages about sending/receiving of the configuration data (Sasha)
........S. [ZBX-8060] fixed server crash when calculating queue (asaveljevs)
..F....... [ZBX-7867] fixed graph item drag and drop when selecting multiple items (Ivo)
..F....... [ZBX-8046] fixed application toggling in Latest data page if same item belongs to several applications (Ivo)
...G...... [ZBX-7856] added workaround for Windows _wstat64() not working with symlinks (wiper)