@@ -6,6 +6,7 @@ A.F....... [ZBX-1357] updated Brazilian Portuguese translation; thanks to Zabbix
 ........S. [ZBX-7555] removed "select" statement from the history cache; increased the cache performance (Sasha)
 
 Bug fixes:
+..F....... [ZBX-8140] added net.udp.listen key to item popup (Eduard)
 ..F....... [ZBX-8123] fixed form fields show/hide switching in IE9 (Eduard)
 ..F....... [ZBX-8083] fixed proxy performance query item conditions to be same as in dashboard (Krists)
 ..F....... [ZBX-8021] fixed password changing for users with internal authentication (Eduard)
